--- a/NarouApp.csproj
+++ b/NarouApp.csproj
@@ -8,21 +8,40 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include=".lefthook\pre-commit\lint.sh" />
+        <Content Include=".lefthook\pre-commit\lint.sh"/>
+        <Content Include="Frontend\Components\CustomComponent\Ranking\Application\RankingComponent.razor.cs"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Blazorise.Bulma" Version="1.6.0" />
-      <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.6.0" />
-      <PackageReference Include="coverlet.msbuild" Version="6.0.2">
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        <PrivateAssets>all</PrivateAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.CodeAnalysis.Metrics" Version="3.3.4" />
+        <PackageReference Include="Blazorise.Bulma" Version="1.6.0"/>
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.6.0"/>
+        <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.Components.Analyzers" Version="8.0.7" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Metrics" Version="3.3.4"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0-preview.7.24405.7"/>
     </ItemGroup>
 
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css" />
-      <_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css.map" />
+        <_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css"/>
+        <_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css.map"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Backend\application\"/>
+        <Folder Include="Frontend\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <AdditionalFiles Include="Frontend\Components\App.razor"/>
+        <AdditionalFiles Include="Frontend\Components\CustomComponent\Ranking\Application\RankingConponent.razor"/>
+        <AdditionalFiles Include="Frontend\Components\Layout\MainLayout.razor"/>
+        <AdditionalFiles Include="Frontend\Components\Layout\NavMenu.razor"/>
+        <AdditionalFiles Include="Frontend\Components\Pages\Error.razor"/>
+        <AdditionalFiles Include="Frontend\Components\Pages\Home.razor"/>
+        <AdditionalFiles Include="Frontend\Components\Routes.razor"/>
+        <AdditionalFiles Include="Frontend\Components\_Imports.razor"/>
     </ItemGroup>
 </Project>
