--- a/qodana.yaml
+++ b/qodana.yaml
@@ -14,6 +14,7 @@ exclude:
   - name: UnusedAutoPropertyAccessor.Global
   - name: ClassNeverInstantiated.Global
   - name: ArrangeTypeMemberModifiers
+  - name: ArrangeModifiersOrder
 linter: jetbrains/qodana-dotnet:2024.1
 profile:
   name: qodana.recommended
