--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,4 +1,8 @@
  pre-commit:
+   parallel: true
+   commands: 
+     test:
+       run: dotnet test
    scripts:
      "lint.sh":
        runner: bash
