--- a/qodana.yaml
+++ b/qodana.yaml
@@ -15,6 +15,8 @@ exclude:
   - name: ClassNeverInstantiated.Global
   - name: ArrangeTypeMemberModifiers
   - name: ArrangeModifiersOrder
+  - name: PropertyCanBeMadeInitOnly.Global
+
 linter: jetbrains/qodana-dotnet:2024.1
 profile:
   name: qodana.recommended
