--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: Qodana
 on:
+  workflow_dispatch:
   pull_request:
+  push:
+    branches: # Specify your branches here
+      - main # The 'main' branch
+      - master # The 'master' branch
+      - 'releases/*' # The release branches
 
 jobs:
   qodana:
