--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./NarouApp/
+        working-directory: NarouApp/
     steps:
+      - run: pwd
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
@@ -28,8 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./NarouBackend/
+        working-directory: NarouBackend/
     steps:
+      - run: pwd
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
