--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
         with:
-          args: --property=qodana.net.solution=NarouApp.sln,--project-dir qodana.yaml,--fail-threshold 1
+          args: --property=qodana.net.solution=NarouApp.sln,--fail-threshold 1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
       - name: "test"
@@ -34,6 +34,6 @@ jobs:
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
         with:
-          args: --property=qodana.net.solution=NarouBackend.sln,--project-dir NarouBackend/,--fail-threshold 1
+          args: --property=qodana.net.solution=NarouBackend.sln,--fail-threshold 1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
