--- a/NarouApp/NarouApp.csproj
+++ b/NarouApp/NarouApp.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="Blazorise.Bulma" Version="1.6.1"/>
         <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.6.1"/>
         <PackageReference Include="FluentAssertions" Version="6.12.1"/>
@@ -47,10 +48,6 @@
     <ItemGroup>
         <PackageReference Include="bunit" Version="1.31.3"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.2">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
