#20 testコードのカバレッジを取得する

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,8 +2,8 @@ pre-commit:
   commands:
     test:
       run:  dotnet-coverage collect -f xml -s settings.xml  "dotnet test"
-#    getCoverage:
-#      run:  bash getCoverage.sh
+    getCoverage:
+      run:  bash getCoverage.sh
 #  scripts:
 #    "lint-front.sh":
 #      runner: bash
