--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
       - name: "test"
-        run: dotnet test
+        run: dotnet-coverage collect -f xml -s settings.xml  "dotnet test"
       - name: "chmod"
         run: sudo chmod +x ./getCoverage.sh
       - name: "getCoverage"
