#63 ncodeからタイトルなどを取得

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,8 +4,8 @@ pre-commit:
       run:  dotnet-coverage collect -f xml -s settings.xml  "dotnet test"
     2-getCoverage:
       run:  bash getCoverage.sh
-#  scripts:
-#    "lint-front.sh":
-#      runner: bash
-#    "lint-backend.sh":
-#      runner: bash
+  scripts:
+    "lint-front.sh":
+      runner: bash
+    "lint-backend.sh":
+      runner: bash
